<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cardNumberLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="@color/green"
        app:errorEnabled="true"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardNumber"
            android:layout_width="match_parent"
            android:maxLength="19"
            android:layout_height="@dimen/widget_height"
            android:hint="@string/card_number"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/expiryDateLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/expiry"
        app:boxStrokeColor="@color/green"
        app:errorEnabled="true"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toStartOf="@+id/securityCodeLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/expiryDate"
            android:maxLength="5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_height"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/securityCodeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:boxStrokeColor="@color/green"
        app:errorEnabled="true"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/expiryDateLayout"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/securityCode"
            android:hint="@string/security_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_height"
            android:inputType="numberPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:boxStrokeColor="@color/green"
        app:errorEnabled="true"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstNameLayout"
        app:layout_constraintTop_toBottomOf="@+id/securityCodeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_height"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:boxStrokeColor="@color/green"
        app:errorEnabled="true"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toStartOf="@+id/lastNameLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/securityCodeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_height"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitPay"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/green"
        android:elevation="5dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>